--- a/post/2018-05-29-blog.Rmd
+++ b/post/2018-05-29-blog.Rmd
@@ -12,6 +12,10 @@ This post will be about the importing of data from different types of files form
 This post will be about the importing of data from different types of files format
 This post will be about the importing of data from different types of files format
 This post will be about the importing of data from different types of files format.
+This post will be about the importing of data from different types of files format
+This post will be about the importing of data from different types of files format
+This post will be about the importing of data from different types of files format
+This post will be about the importing of data from different types of files format.
 
 
 ```{r First, echo=TRUE, paged.print=TRUE}
